# orca-premie-solana-contracts

./: .cursorrules  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  SOLANA_BUSINESS_LOGIC_REQUIREMENTS.md  SOLANA_REQUIREMENTS.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  solana-complete-guide-for-evm-developers.md  solana-for-evm-developers.md  solana_program_guide_with_expert_notes.md  tsconfig.json
client/: README.md  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: TradingDemo.tsx
client/src/hooks/: useTrading.ts  useVault.ts
client/src/providers/: WalletProvider.tsx
programs/escrow-vault/: Cargo.toml
programs/escrow-vault/src/: error.rs  events.rs  lib.rs  utils.rs
programs/escrow-vault/src/instructions/: credit_balance.rs  deposit.rs  emergency.rs  initialize.rs  manage_trader.rs  mod.rs  slash_balance.rs  transfer_balance.rs  (+2 more)
programs/premarket-trade/: Cargo.toml  README_create_token_market.md  README_manage_relayers.md  README_map_token.md  README_match_orders.md  README_solution_a_implementation.md
programs/premarket-trade/src/: common.rs  error.rs  events.rs  lib.rs  utils.rs
programs/premarket-trade/src/instructions/: admin.rs  cancel_order.rs  cancel_trade.rs  create_token_market.rs  emergency.rs  initialize.rs  manage_relayers.rs  map_token.rs  match_orders.rs  mod.rs  settle_trade.rs  update_config.rs
programs/premarket-trade/src/state/: mod.rs  order_status.rs  token_market.rs  trade_config.rs  trade_record.rs
programs/shared/: Cargo.toml
programs/user-profile/: Cargo.toml
programs/user-profile/src/: lib.rs
scripts/: 02-add-authorized-trader.ts  03-deposit-collateral.ts  04-withdraw-collateral.ts  05-initialize-trading.ts  06-create-token-market.ts  07-map-token.ts  08-manage-relayers.ts  09-match-orders.ts  10-settle-trade.ts  11-cancel-trade.ts  12-stream-events.ts  README.md  initialize-trading.ts  initialize-vault.ts  mint-token.ts  transfer-token.ts
scripts/keys/: README.md
scripts/utils/: order-hash.ts
sdk/: README.md  index.ts  package.json  tsconfig.json
sdk/core/: base-client.ts
sdk/examples/: 01-create-token-market.ts  10-stream-events.ts  11-parse-single-signature.ts  12-stream-events.ts
sdk/idl/: escrow_vault.json  premarket_trade.json  user_profile.json
sdk/trading/: index.ts  trading-client.ts  trading-operations.ts
sdk/types/: escrow_vault.ts  events.ts  index.ts  premarket_trade.ts  user_profile.ts  wallet.ts
sdk/utils/: base-client.ts  client-provider.ts  constants.ts  error-handler.ts  event-factory.ts  format-events.ts  get-decimals.ts  idl-constants.ts  index.ts  logs.ts  parse-events-from-signature.ts  parse-transaction.ts  pda.ts  token.ts  validation.ts
sdk/vault/: index.ts  vault-client.ts  vault-operations.ts
tests/: user-profile.ts
(+4 files in other folders)
