[workspace]
members = [
    "programs/escrow-vault",
    "programs/premarket-trade",
    "programs/shared"
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release.package.user-profile]
overflow-checks = true 