[workspace]
resolver = "2"
members = [
    "programs/escrow-vault",
    "programs/premarket-trade",
    "programs/user-profile"
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17"

[profile.release]
overflow-checks = true
lto = "fat"
strip = true          # Remove debug symbols
panic = "abort"       # Smaller panic handling  
codegen-units = 1
opt-level = "z"       # Optimize for size instead of speed

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release.package.user-profile]
overflow-checks = true 