[package]
name = "premarket-trade"
version = "0.1.0"
description = "PreMarket Trading Program - Solana Implementation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "premarket_trade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", default-features = false, features = ["token"] }
solana-program = { workspace = true }

escrow-vault = { path = "../escrow-vault", features = ["cpi"] } 